# imagine

./: .gitignore  Cargo.toml  LICENSE-ZLIB.md  README.md  demo.bat  how-to-decompress-zlib.md  notes.txt  rfc1950.md  rfc1951.md  rustfmt.toml
.github/workflows/: pages.yml  rust.yml
examples/: bmp_print.rs  demo.rs  imagine_viewer.rs  png_chunk_print.rs  png_viewer.rs  viewer.rs
src/: alloc_bitmap.rs  ascii_array.rs  basic_image.rs  bit_depth_changes.rs  bit_source.rs  bitmap.rs  bmp.rs  bmp2.rs  borrowed_bitmap.rs  chunk.rs  chunk_iter.rs  code_length_alphabet.rs  decompress.rs  dist_alphabet.rs  error.rs  filtering.rs  header.rs  huff_symbol.rs  image.rs  int_endian.rs  iterators.rs  lib.rs  lit_len_alphabet.rs  main.rs  netpbm.rs  parser_helpers.rs  pixel_formats.rs  pixels.rs  png.rs  png_header.rs  tree_entry.rs  util.rs
src/bmp/: bmp_header.rs  colorspace.rs  file_header.rs  header_structs.rs  headers.rs  ih_core.rs  ih_os2.rs  ih_v1.rs  ih_v2.rs  ih_v3.rs  ih_v4.rs  ih_v5.rs  info_header.rs  iters.rs  mod.rs  nice_header.rs  raw_headers.rs  rle.rs
src/decompress/: bit_source.rs  code_length_alphabet.rs  dist_alphabet.rs  fixed_huffman_tree.rs  lit_len_alphabet.rs  tree_entry.rs
src/netpbm/: automatic.rs  iter_ascii_1bpp.rs  iter_ascii_u16.rs  iter_ascii_u8.rs  mod.rs
src/pbm/: mod.rs
src/png/: actl.rs  bkgd.rs  chrm.rs  chunk.rs  chunks.rs  cicp.rs  crc32.rs  exif.rs  fctl.rs  fdat.rs  gama.rs  hist.rs  iccp.rs  idat.rs  iend.rs  ihdr.rs  itxt.rs  mod.rs  phys.rs  plte.rs  png_chunk.rs  raw_chunk.rs  sbit.rs  spare.rs  splt.rs  srgb.rs  tests.rs  text.rs  time.rs  trns.rs  unfilter.rs  ztxt.rs
tests/: all_tests.rs
tests/bmp/: mod.rs
tests/netpbm/: p1.pbm  p3.ppm
tests/png/: mod.rs
