[package]
name = "imagine"
description = "A crate to help with images."
repository = "https://github.com/Lokathor/imagine"
version = "0.4.0"
edition = "2021"
license = "Zlib OR Apache-2.0 OR MIT"
categories = ["encoding", "no-std"]

autoexamples = false

[features]
default = ["alloc", "png", "miniz_oxide", "bmp", "netpbm"]
align_pixels = [] # Causes 4-byte pixel structs to be align=4 (normaly they're align=1)
alloc = []
png = [] # Portable Network Graphics
bmp = [] # Windows Bitmap
netpbm = ["wide"] # Covers all the Netpbm files: pbm, pgm, ppm, pnm, pam

[dependencies]
bytemuck = "1.11"
bitfrob = "0.2.3"
miniz_oxide = { version = "0.6", default-features = false, optional = true }
wide = { version = "0.7.6", default-features = false, optional = true }

[dev-dependencies]
getrandom = "0.2.7"
walkdir = "2.3.2"
pixels = "0.9"
winit = "0.26"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg","docs_rs"]
all-features = true

[[example]]
name = "png_chunk_print"
required-features = ["png"]

[[example]]
name = "imagine_viewer"
required-features = ["alloc", "png", "miniz_oxide", "bmp"]
