[package]
name = "imagine"
description = "A crate to help with images."
repository = "https://github.com/Lokathor/imagine"
version = "0.5.0-pre.0"
edition = "2021"
license = "Zlib OR Apache-2.0 OR MIT"
categories = ["encoding", "no-std"]

autoexamples = false

[features]
default = ["alloc", "miniz_oxide", "png", "bmp", "netpbm"]
alloc = []
png = [] # Portable Network Graphics
bmp = [] # Windows Bitmap
netpbm = [] # Covers all the Netpbm files: pbm, pgm, ppm, pnm, pam

[dependencies]
pixel_formats = "0.1.5"
bytemuck = "1.13.1"
bitfrob = {version = "1.2.0", features=["track_caller"]}
miniz_oxide = { version = "0.7.1", default-features = false, optional = true }
wide = { version = "0.7.8", default-features = false, optional = true }

[dev-dependencies]
getrandom = "0.2.7"
walkdir = "2.3.2"
beryllium = "0.12.3"
ezgl = "0.2.0"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg","docs_rs"]
all-features = true

[[example]]
name = "png_chunk_print"
required-features = ["png"]

[[example]]
name = "viewer"
required-features = ["alloc", "png", "miniz_oxide", "bmp", "netpbm"]
